# rgbd_data_collection

./: README.md  start_all_arm.sh  start_follow_arm.sh
data-collection/: .gitignore  .gitlab-ci.yml  README.md  install.sh  pyproject.toml  ruff.toml
data-collection/airbot_data_collection/: arg_loader.py  basis.py  config.py  main.py  readme.md  utils.py
data-collection/airbot_data_collection/common/: __init__.py
data-collection/airbot_data_collection/defaults/: config.yaml  config_full.yaml  config_joy.yaml  config_playback.yaml  config_setup_ptk.yaml  config_setup_ptk_realsense.yaml  config_single_arm_dual_rgbd.yaml  config_vr.yaml  fsm.py
data-collection/airbot_data_collection/demonstrate/: basis.py  configs.py  interface.py
data-collection/airbot_data_collection/doc/: COLLECTION_GUIDE.md  ERROR_INFO.md  FRAME_FILTER_QUICKSTART.md  MCAP_TO_DATASET_GUIDE.md  UPLOAD_FEATURE_README.md  VISUALIZATION_GUIDE.md
data-collection/airbot_data_collection/managers/: basis.py  joycontrol.py  keyboard.py  vrcontrol.py
data-collection/airbot_data_collection/scripts/: bind_can_udev.sh  calibrate_dual_cameras.py  dual_camera_calibration.yaml  refine_calibration.py  setup.py  station_config.yaml  visualize_sample.py
data-collection/airbot_data_collection/state_machine/: basis.py  fsm.py
data-collection/airbot_data_collection/tests/: check_cameras.py  check_mmk_mcap_dataset.py  decode.py  list_cameras.py  mask.py  mmk_replay.py  multi_capture.py  show_mcap.py  test_airbot_mmk2.py  test_analyze_image.py  test_av.py  test_av_coder.py  test_av_seek.py  test_bar.py  test_encoding.py  test_event_rpc.py  test_gray_encode.py  test_list2np.py  test_mcap_player_control.py  test_mcap_player_control_noise.py  test_mcap_player_control_with_record.py  test_mcap_reader.py  test_mcap_upload.py  test_nice.py  test_noisy_servo.py  test_pcd.py  test_process_analysis.py  test_raw_image_flb.py  test_shm_np.py  test_shm_value.py  (+8 more)
(+59 files in other folders)
