[build-system]
requires = ["setuptools<70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airbot-data-collection"
version = "0.6.3"
description = "AIRBOT Data Collection"
authors = [{ name = "OpenGHz", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["pydantic", "numpy", "more-itertools", "typing-extensions", "setproctitle"]

[project.optional-dependencies]
cv2 = ["opencv-python"]
rs = ["pyrealsense2"]
web = ["fastapi", "uvicorn"]
v4l2 = ["linuxpy", "PyTurboJPEG"]
udev = ["pyudev"]
mcap = ["flatbuffers", "foxglove-schemas-flatbuffer", "mcap", "flatten-dict"]
image = ["PyTurboJPEG", "av"]
basic = [
    "pydantic-settings",
    "argdantic",
    "tyro",
    "omegaconf >=2.3.0",
    "hydra-core >=1.3.2",
    "transitions",
    "bidict",
    "pynput >=1.8.1",
    "tqdm",
    "send2trash",
]
all = [
    "pydantic-settings",
    "argdantic",
    "omegaconf >=2.3.0",
    "hydra-core >=1.3.2",
    "transitions",
    "bidict",
    "pynput >=1.8.1",
    "tqdm",
    "opencv-python",
    # "pyrealsense2",
    "linuxpy",
    # "fastapi",
    # "uvicorn",
    "PyTurboJPEG",
    "pyudev",
    "flatbuffers",
    "foxglove-schemas-flatbuffer",
    "mcap",
    "flatten-dict",
    "av",
    "tyro",
    "send2trash",
]
# no hardware support, such as
# opencv, linuxpy, udev, pynput
# but pyav is included
soft = [
    "pydantic-settings",
    "argdantic",
    "tyro",
    "omegaconf >=2.3.0",
    "hydra-core >=1.3.2",
    "transitions",
    "bidict",
    "tqdm",
    "PyTurboJPEG",
    "flatbuffers",
    "foxglove-schemas-flatbuffer",
    "mcap",
    "flatten-dict",
    "av",
    "send2trash",
]
ml = ["torch", "torchvision"]

[tool.setuptools.packages.find]
where = ["."]
include = ["airbot_data_collection*"]
